# ThreatDriven-DaC

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: detection-tests.yml
data/logs/: cloudtrail_benign.json  cloudtrail_suspicious.json
data/threat_intel/: malicious_domains.csv  malicious_ips.csv  sample_stix_indicators.json
macos/ThreatDrivenDaC/Sources/: ThreatDrivenDaCApp.swift
reports/: alerts.json  sample_detection_report.md
rules/: access_key_created.yml  admin_policy_attached.yml  cloudtrail_stopped.yml  console_login_without_mfa.yml  iam_user_created.yml  malicious_ip_api_call.yml  public_s3_bucket_policy.yml  root_console_login.yml  security_group_open_to_world.yml  unusual_region_activity.yml
scripts/: build_macos_app.sh
src/: __init__.py  ai_summary.py  alert_generator.py  dashboard.py  detection_engine.py  log_loader.py  macos_bridge.py  pipeline.py  report_generator.py  risk_scorer.py  rule_loader.py  threat_intel.py
tests/: test_alert_generator.py  test_dashboard.py  test_detection_engine.py  test_log_loader.py  test_macos_bridge.py  test_pipeline.py  test_report_generator.py  test_rule_schema.py  test_threat_intel.py
